@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1033 2009-09-28 07:27:51 martin Exp $
+# $Id: CHANGES,v 1.1034 2009-09-28 13:11:45 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -31,6 +31,8 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.5 (2009/??/??)
+ - (2009/09/28) Fixed bug#4269 - Softwareerror in stats module after uninstall
+    ITSMIncidentProblemManagement
  - (2009/09/28) Fixed bug#4341 - No HighlightColors configured fills up OTRS log
     file with warnings.
  - (2009/09/28) Fixed bug#4328 - Incorrect charset in AgentTicketAttachment.
